@@ -1445,15 +1445,60 @@ name|toString
 argument_list|()
 expr_stmt|;
 name|String
+name|expectedOwner
+init|=
+name|ugi
+operator|.
+name|getShortUserName
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|Path
+operator|.
+name|WINDOWS
+condition|)
+block|{
+specifier|final
+name|String
+name|adminsGroupString
+init|=
+literal|"Administrators"
+decl_stmt|;
+if|if
+condition|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|ugi
+operator|.
+name|getGroupNames
+argument_list|()
+argument_list|)
+operator|.
+name|contains
+argument_list|(
+name|adminsGroupString
+argument_list|)
+condition|)
+block|{
+name|expectedOwner
+operator|=
+name|adminsGroupString
+expr_stmt|;
+block|}
+block|}
+name|String
 name|stdoutFile1
 init|=
 name|StringUtils
 operator|.
 name|join
 argument_list|(
-name|Path
+name|File
 operator|.
-name|SEPARATOR
+name|separator
 argument_list|,
 name|Arrays
 operator|.
@@ -1463,13 +1508,12 @@ operator|new
 name|String
 index|[]
 block|{
-name|srcFileRoot
+name|workDir
 operator|.
-name|toUri
+name|getAbsolutePath
 argument_list|()
-operator|.
-name|toString
-argument_list|()
+block|,
+literal|"srcFiles"
 block|,
 name|testContainerId1
 operator|.
@@ -1497,10 +1541,7 @@ name|message1
 init|=
 literal|"Owner '"
 operator|+
-name|ugi
-operator|.
-name|getShortUserName
-argument_list|()
+name|expectedOwner
 operator|+
 literal|"' for path "
 operator|+
@@ -1519,9 +1560,9 @@ name|StringUtils
 operator|.
 name|join
 argument_list|(
-name|Path
+name|File
 operator|.
-name|SEPARATOR
+name|separator
 argument_list|,
 name|Arrays
 operator|.
@@ -1531,13 +1572,12 @@ operator|new
 name|String
 index|[]
 block|{
-name|srcFileRoot
+name|workDir
 operator|.
-name|toUri
+name|getAbsolutePath
 argument_list|()
-operator|.
-name|toString
-argument_list|()
+block|,
+literal|"srcFiles"
 block|,
 name|testContainerId1
 operator|.
@@ -1565,10 +1605,7 @@ name|message2
 init|=
 literal|"Owner '"
 operator|+
-name|ugi
-operator|.
-name|getShortUserName
-argument_list|()
+name|expectedOwner
 operator|+
 literal|"' for path "
 operator|+
